use hiera as enc

--- a/hieradata/nodes/nicklinsky2.mylabserver.com.yaml
+++ b/hieradata/nodes/nicklinsky2.mylabserver.com.yaml
@@ -6,3 +6,5 @@ profile::nginx::vhosts:
  - 'fqdn': 'nicklinsky2b.mylabserver.com'
    'port': 80
    'servicer_aliases': 'nicklinsky2b1.mylabserver.com'
+classes:
+  - profile:ngnix
